--- a/AdminLauncher.BusinessLibrary/AdminLauncher.BusinessLibrary.csproj
+++ b/AdminLauncher.BusinessLibrary/AdminLauncher.BusinessLibrary.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="IconExtractor" Version="1.0.1" />
+  </ItemGroup>
+
 </Project>
