--- a/AdminLauncher.AppWPF/AdminLauncher.AppWPF.csproj
+++ b/AdminLauncher.AppWPF/AdminLauncher.AppWPF.csproj
@@ -9,11 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="list.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AdminLauncher.BusinessLibrary\AdminLauncher.BusinessLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="list.png" />
   </ItemGroup>
 
 </Project>
