--- a/AdminLauncher.BusinessLibrary/AdminLauncher.BusinessLibrary.csproj
+++ b/AdminLauncher.BusinessLibrary/AdminLauncher.BusinessLibrary.csproj
@@ -7,7 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="list.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="IconExtractor" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="list.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
