Implementato controllo aggiornamenti

--- a/AdminLauncher.AppWPF/AdminLauncher.AppWPF.csproj
+++ b/AdminLauncher.AppWPF/AdminLauncher.AppWPF.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AdminLauncher.BusinessLibrary\AdminLauncher.BusinessLibrary.csproj" />
+    <ProjectReference Include="..\AdminLauncher.UpdateLibrary\AdminLauncher.UpdateLibrary.csproj" />
   </ItemGroup>
 
   <ItemGroup>
