--- a/AdminLauncher.BusinessLibrary/AdminLauncher.BusinessLibrary.csproj
+++ b/AdminLauncher.BusinessLibrary/AdminLauncher.BusinessLibrary.csproj
@@ -11,6 +11,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <COMReference Include="IWshRuntimeLibrary">
+      <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>0</VersionMinor>
+      <VersionMajor>1</VersionMajor>
+      <Guid>f935dc20-1cf0-11d0-adb9-00c04fd58a0b</Guid>
+      <Lcid>0</Lcid>
+      <Isolated>false</Isolated>
+      <EmbedInteropTypes>true</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="IconExtractor" Version="1.0.1" />
   </ItemGroup>
 
