Added Programs and Routine on NotifyIcon menu

--- a/AdminLauncher.AppWPF/AdminLauncher.AppWPF.csproj
+++ b/AdminLauncher.AppWPF/AdminLauncher.AppWPF.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="favorite.png" />
+    <None Remove="OnOff.png" />
     <None Remove="rocket.png" />
     <None Remove="rocketDebug.ico" />
   </ItemGroup>
@@ -39,7 +39,23 @@
     <Content Include="favorite.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Resource Include="rocket.png" />
+    <Resource Include="Resources\OnOff.png" />
+    <Resource Include="Resources\rocket.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
