Fixed get icon of executable with no icon

--- a/AdminLauncher.AppWPF/App.config
+++ b/AdminLauncher.AppWPF/App.config
@@ -3,5 +3,6 @@
 	<appSettings>
 		<add key="CurrVersion" value="1.0"/>
 		<add key="UrlUpdateChecker" value="https://pastebin.com/raw/yhxzjRXj"/>
+		<add key="IconTempDirectoryName" value="AdminLauncherTempIcon"/>
 	</appSettings>
 </configuration>
