--- a/AdminLauncher.AppWPF/AdminLauncher.AppWPF.csproj
+++ b/AdminLauncher.AppWPF/AdminLauncher.AppWPF.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <None Remove="OnOff.png" />
+    <None Remove="Resources\kofi_symbol.png" />
     <None Remove="rocket.png" />
     <None Remove="rocketDebug.ico" />
   </ItemGroup>
@@ -39,6 +40,9 @@
     <Content Include="favorite.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Resource Include="Resources\kofi_symbol.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\OnOff.png" />
     <Resource Include="Resources\rocket.png" />
   </ItemGroup>
