implemented themes, bugfix minore, code refactored

--- a/AdminLauncher.AppWPF/App.config
+++ b/AdminLauncher.AppWPF/App.config
@@ -5,5 +5,7 @@
 		<add key="UrlUpdateChecker" value="https://pastebin.com/raw/yhxzjRXj"/>
 		<add key="IconTempDirectoryName" value="AdminLauncherTempIcon"/>
 		<add key="kofiUrl" value="https://ko-fi.com/kdesantis"/>
+		<add key="BaseTheme" value="Light,Dark"/>
+		<add key="ColorsTheme" value="Red,Green,Blue,Purple,Orange,Lime,Emerald,Teal,Cyan,Cobalt,Indigo,Violet,Pink,Magenta,Crimson,Amber,Yellow,Brown,Olive,Steel,Mauve,Taupe,Sienna"/>
 	</appSettings>
 </configuration>
