--- a/AdminLauncherUpdateFile.json
+++ b/AdminLauncherUpdateFile.json
@@ -1,5 +1,5 @@
 {
-  "Version": "1.2",
-  "Url": "https://github.com/kdesantis/AdminLauncher/releases/tag/1.2",
-  "ReleaseNotes": "-Replaced panel with TabControl\n-Modernized the interface and added themes\n-Minor Fix"
+  "Version": "1.3",
+  "Url": "https://github.com/kdesantis/AdminLauncher/releases/tag/1.3",
+  "ReleaseNotes": "-Added wizard setup\n-Log error into a file\n-Bypassed all error when exe icon retrival crash"
 }
