--- a/AdminLauncherUpdateFile.json
+++ b/AdminLauncherUpdateFile.json
@@ -1,5 +1,5 @@
 {
-  "Version": "1.4",
-  "Url": "https://github.com/kdesantis/AdminLauncher/releases/tag/1.4",
-  "ReleaseNotes": "-Fixed the window dimension for low resolutions monitor\n-fixed executable file retrival from shortcut for wizard window\n"
+  "Version": "1.5",
+  "Url": "https://github.com/kdesantis/AdminLauncher/releases/tag/1.5",
+  "ReleaseNotes": "-\n-\n"
 }
