--- a/AdminLauncherUpdateFile.json
+++ b/AdminLauncherUpdateFile.json
@@ -1,5 +1,6 @@
 {
   "Version": "1.6",
-  "Url": "https://github.com/kdesantis/AdminLauncher/releases/tag/1.6",
-  "ReleaseNotes": ""
+  "Type": 1,
+  "Url": "https://github.com/kdesantis/AdminLauncher/releases/download/1.6/Admin.Launcher_1.6_Setup.exe",
+  "ReleaseNotes": "-introduced the type of update to be performed"
 }
