--- a/AdminLauncherUpdateFile.json
+++ b/AdminLauncherUpdateFile.json
@@ -2,5 +2,5 @@
   "Version": "1.6",
   "Type": 1,
   "Url": "https://github.com/kdesantis/AdminLauncher/releases/download/1.6/Admin.Launcher_1.6_Setup.exe",
-  "ReleaseNotes": "-introduced the type of update to be performed"
+  "ReleaseNotes": "-Introduced the type of update to be performed\n-Added search box\n-Fixed problem on scrollbar into home panel"
 }
