--- a/AdminLauncher.AppWPF/AdminLauncher.AppWPF.csproj
+++ b/AdminLauncher.AppWPF/AdminLauncher.AppWPF.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <None Remove="OnOff.png" />
+    <None Remove="Resources\donkey.png" />
     <None Remove="Resources\kofi_symbol.png" />
     <None Remove="rocket.png" />
     <None Remove="rocketDebug.ico" />
@@ -44,6 +45,9 @@
     <Reference Include="Interop.IWshRuntimeLibrary">
       <HintPath>..\AdminLauncher.BusinessLibrary\obj\Debug\net8.0\Interop.IWshRuntimeLibrary.dll</HintPath>
     </Reference>
+    <Content Include="Resources\donkey.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Resource Include="Resources\kofi_symbol.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
