--- a/AdminLauncherUpdateFile.json
+++ b/AdminLauncherUpdateFile.json
@@ -1,6 +1,6 @@
 {
-  "Version": "2.0",
+  "Version": "2.1",
   "Type": 1,
-  "Url": "https://github.com/kdesantis/AdminLauncher/releases/download/1.7/Admin.Launcher_2.0_Setup.exe",
-  "ReleaseNotes": "-Redesigned a new usable interface"
+  "Url": "https://github.com/kdesantis/AdminLauncher/releases/download/2.1/Admin.Launcher_2.1_Setup.exe",
+  "ReleaseNotes": "-Moved quick run button on lateral menu"
 }
