--- a/AdminLauncherUpdateFile.json
+++ b/AdminLauncherUpdateFile.json
@@ -2,5 +2,5 @@
   "Version": "2.2",
   "Type": 1,
   "Url": "https://github.com/kdesantis/AdminLauncher/releases/download/2.2/Admin.Launcher_2.2_Setup.exe",
-  "ReleaseNotes": ""
+  "ReleaseNotes": "Integrated Explorer++"
 }
