--- a/AdminLauncherUpdateFile.json
+++ b/AdminLauncherUpdateFile.json
@@ -1,6 +1,6 @@
 {
-  "Version": "2.2",
+  "Version": "2.3",
   "Type": 1,
-  "Url": "https://github.com/kdesantis/AdminLauncher/releases/download/2.2/Admin.Launcher_2.2_Setup.exe",
-  "ReleaseNotes": "Integrated Explorer++"
+  "Url": "https://github.com/kdesantis/AdminLauncher/releases/download/2.2/Admin.Launcher_2.3_Setup.exe",
+  "ReleaseNotes": ""
 }
