Fix first configuration

--- a/AdminLauncherUpdateFile.json
+++ b/AdminLauncherUpdateFile.json
@@ -2,5 +2,5 @@
   "Version": "2.3",
   "Type": 1,
   "Url": "https://github.com/kdesantis/AdminLauncher/releases/download/2.2/Admin.Launcher_2.3_Setup.exe",
-  "ReleaseNotes": ""
+  "ReleaseNotes": "First Configuration Fix"
 }
